lambda-appsync-proc/tests/fail/invalid_log_init_args.stderr
error[E0593]: function is expected to take 0 arguments, but it takes 1 argument
 --> tests/fail/invalid_log_init_args.rs:6:67
  |
2 |     fn custom_log_init(_arg: String) {
  |     -------------------------------- takes 1 argument
...
6 |     appsync_lambda_main!("../../../../schema.graphql", log_init = custom_log_init);
  |                                                                   ^^^^^^^^^^^^^^^ expected function that takes 0 arguments
  |
note: required by a bound in `call_log_init`
 --> tests/fail/invalid_log_init_args.rs:6:67
  |
6 |     appsync_lambda_main!("../../../../schema.graphql", log_init = custom_log_init);
  |                                                                   ^^^^^^^^^^^^^^^ required by this bound in `call_log_init`
